# PythonAutoTestTemplate

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
