[metadata]
name = slapping
description = slap that like button
author = Md. Fahimul Islam
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# Name of the package.
packages =
    slapping
# Installation dependencies to use this package. Be flixible.
# Won't install the above package if following is NOT satisfied in the environment.
# Example: ERROR: Package 'slapping' requires a different Python: 3.8.8 not in '>=3.11'
install_requires =
    requests>=2
python_requires = >=3.6
# Source code directory of the package. "package_dir" will be searched for the package.
package_dir =
    =src
zip_safe = no

[options.extras_require]
# Dev dependencies to test this package. Be rigid, and provide specific versions so that quickly test can be run.
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
# Need to create an empty file: "py.typed" right next to "__init__.py" of the package's "src" dir.
slapping = py.typed

[flake8]
max-line-length = 160